# ipymake

./: README.md
branches/devel-0.2-alpha/examples/kusp/examples/balanced_pipeline/: CMakeLists.txt  example-3.config  pipelines.gnu
branches/devel-0.2-alpha/examples/kusp/examples/multithreads/: CMakeLists.txt  multithreadsC.c  multithreadsD.c
branches/devel-0.2-alpha/examples/kusp/examples/sigpipe_gsched/: CMakeLists.txt
branches/devel-0.2-alpha/examples/kusp/examples/simple_dsui/: CMakeLists.txt  simple.dsui
branches/devel-0.2-alpha/examples/kusp/ntp/: CMakeLists.txt  ntp-4.2.4p7.patch
branches/devel-0.2-alpha/examples/kusp/subsystems/clksync/: CMakeLists.txt  build_clksync.py  setup_clksync.py
branches/devel-0.2-alpha/examples/kusp/subsystems/clksync/include/: clksyncapi.h
branches/devel-0.2-alpha/examples/kusp/subsystems/common/include/: CMakeLists.txt  exception.h  generate_config_header
branches/devel-0.2-alpha/examples/kusp/subsystems/datastreams/: CMakeLists.txt  build_datastreams.py  dsui.py  pydsui_backend.py  pydsui_backend_wrap.c
branches/devel-0.2-alpha/examples/kusp/subsystems/datastreams/dski/: CMakeLists.txt
branches/devel-0.2-alpha/examples/kusp/subsystems/datastreams/dsui/: build_dsui.py
branches/devel-0.2-alpha/examples/kusp/subsystems/datastreams/include/: dsentity.h  dsheader.h  dsui.h
branches/devel-0.2-alpha/examples/kusp/subsystems/datastreams/postprocess/: dcg.py  event_data.py  inputs.py  postprocessd  ppexcept.py  syscall.py  test.ns
branches/devel-0.2-alpha/examples/kusp/subsystems/datastreams/pydstream/: dsuimodule.c
branches/devel-0.2-alpha/examples/kusp/subsystems/discovery/: CMakeLists.txt  build_datastreams.py  build_discovery.py  setup_discovery.py
branches/devel-0.2-alpha/examples/kusp/subsystems/discovery/tools/: __init__.py  smartgdb  syscall_trace  systemMonitorExit
branches/devel-0.2-alpha/examples/kusp/subsystems/netspec/: CMakeLists.txt  build_netspec.py  ns_control  setup_netspec.py
branches/devel-0.2-alpha/examples/kusp/subsystems/netspec/include/: netspec2.h
branches/devel-0.2-alpha/examples/kusp/workspace/errors/error1/: CMakeLists.txt  socketpipe_gsched.c
branches/devel-0.2-alpha/examples/kusp/workspace/experiment_frontend/: CMakeLists.txt
branches/devel-0.2-alpha/examples/kusp/workspace/multithreads/: CMakeLists.txt
branches/devel-0.2-alpha/examples/kusp/workspace/sockpipe/: CMakeLists.txt  barrier.hpp  bp.dski  bp.gsh  cfgu.l  gap_filter.py  message.hpp  pipe.hpp  pipe1.conf  pipe4.conf  rdist.hpp  rr.gsh  sender.cpp  sender3.conf  sender4.conf
tags/0.1-alpha/src-0.1-alpha/examples/kusp/: CMakeLists.txt  ipym_kusp_make.py  ipymake_log.txt
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/: CMakeLists.txt
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/balanced_pipeline_gschedctrl/: balanced-pipeline.gsh  bp_gschedctrl.c
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/global_timeline/: CMakeLists.txt  mpi_netspec
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/multithreads/: multithreadsA.c  multithreadsB.c
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/sigpipe_gsched/: sigpipe.c  sigpipe_gsched.dski  sigpipe_gsched.pipes
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/sigpipe_gsched_ccsm/: sigpipe_gsched_ccsm.pipes
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/sigpipe_gschedctrl/: sigpipe_gschedctrl.gsh
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/socketpipe_gsched/: CMakeLists.txt  run  sockpipe.c
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/socketpipe_gsched_ccsm/: socketpipe_gsched_ccsm.dski
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/socketpipe_gschedctrl/: socketpipe_gschedctrl.dski  socketpipe_gschedctrl.gsh
tags/0.1-alpha/src-0.1-alpha/examples/kusp/examples/unified_sigpipe/: compete.py  sigpipe.pipes  sigpipe2.dski  sigpipe_dski1.pipes  sigpipe_dski2.pipes
tags/0.1-alpha/src-0.1-alpha/examples/kusp/misc/: INSTALLED_FILES  gsched_config_file_spec  kusp_optparse.py.tpl
tags/0.1-alpha/src-0.1-alpha/examples/kusp/rpms/: kusp-0.9-5.fc11.i586.rpm  kusp-ccsm.spec  kusp-clksync.spec  kusp-datastreams.spec
tags/0.1-alpha/src-0.1-alpha/examples/kusp/subsystems/: CMakeLists.txt  ipym_build_subsystems.py
tags/0.1-alpha/src-0.1-alpha/examples/kusp/subsystems/ccsm/: CMakeLists.txt  ipym_build_ccsm.py  libccsmmodule.c
tags/0.1-alpha/src-0.1-alpha/examples/kusp/subsystems/clksync/: __init__.py  build_clksync.py  clksyncmodule.c  e100.c  ipym_build_clksync.py  setup_clksync.py  synchronize
tags/0.1-alpha/src-0.1-alpha/examples/kusp/subsystems/common/: CMakeLists.txt  ipym_build_common.py  setup_pykusp.py
tags/0.1-alpha/src-0.1-alpha/examples/kusp/subsystems/datastreams/: dstream_admin.ns  ipym_build_datastreams.py  namespaces.py  pydsui.py  setup_datastreams.py
tags/0.1-alpha/src-0.1-alpha/examples/kusp/subsystems/discovery/: build_datastreams.py  ipym_build_discovery.py  kernel_constants.py
tags/0.1-alpha/src-0.1-alpha/examples/kusp/subsystems/gsched/: CMakeLists.txt  ipym_build_gsched.py  stop.c
tags/0.1-alpha/src-0.1-alpha/examples/kusp/subsystems/netspec/: ipym_build_netspec.py  netspecd  nspec.cspec  sample.nspec  test.nspec
tags/0.1-alpha/src-0.1-alpha/examples/kusp/tests/ccsm/: ccsm_regression.mk
tags/0.1-alpha/src-0.1-alpha/examples/kusp/workspace/balanced-pipeline/: bp.pipes  example.config  example2.config  pipeline.c
tags/0.1-alpha/src-0.1-alpha/examples/kusp/workspace/camera/: camera2.pipes  cameraedf.py  clksync.multiplex  discarded.doc  finalreport-outline.doc  pipeline.odg
tags/0.1-alpha/src-0.1-alpha/examples/kusp/workspace/ftrace/: preemptoff  sched_switch_stack
tags/0.1-alpha/src-0.1-alpha/examples/kusp/workspace/kusp_opengl/: kuspgl.h
trunk/examples/kusp/examples/balanced_pipeline_gschedctrl/: CMakeLists.txt
trunk/examples/kusp/examples/unified_sigpipe/: CMakeLists.txt  sigpipe.dsui
trunk/examples/kusp/subsystems/datastreams/dsui/: CMakeLists.txt  ipym_build_dsui.py
trunk/examples/prototypes/libkusp/: CMakeLists.txt  configfile_lex.c  configfile_yacc.c  kusp_common.h  rdwr.h
(+543 files in other folders)
