CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( UNIFIED_SIGPIPE )

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )

SET(CMAKE_C_FLAGS "-DCONFIG_DSUI -Wall")
EXECUTE_PROCESS( COMMAND dsui-header --prefix sigpipe WORKING_DIRECTORY
	${CMAKE_CURRENT_BINARY_DIR} )
ADD_EXECUTABLE( sigpipe ${CMAKE_CURRENT_SOURCE_DIR}/sigpipe.c
	${CMAKE_CURRENT_BINARY_DIR}/sigpipe_dsui.c )

TARGET_LINK_LIBRARIES(sigpipe pthread dsui kusp ccsm gsched m)

#Copy over postprocessing and DSUI/DSKI configuration files

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigpipe_dski1.pipes 
    ${CMAKE_CURRENT_BINARY_DIR}/sigpipe_dski1.pipes COPYONLY)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigpipe.pipes 
    ${CMAKE_CURRENT_BINARY_DIR}/sigpipe.pipes COPYONLY)
    
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigpipe_dski2.pipes 
    ${CMAKE_CURRENT_BINARY_DIR}/sigpipe_dski2.pipes COPYONLY)
    
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigpipe1.dski
    ${CMAKE_CURRENT_BINARY_DIR}/sigpipe1.dski COPYONLY)
    
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigpipe2.dski
    ${CMAKE_CURRENT_BINARY_DIR}/sigpipe2.dski COPYONLY)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigpipe.dsui
    ${CMAKE_CURRENT_BINARY_DIR}/sigpipe.dsui COPYONLY)
    
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigpipe_dsui_filter.py
    ${CMAKE_CURRENT_BINARY_DIR}/sigpipe_dsui_filter.py COPYONLY)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/custom_PIDs.py
    ${CMAKE_CURRENT_BINARY_DIR}/custom_PIDs.py COPYONLY)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/unified_test.mk
    ${CMAKE_CURRENT_BINARY_DIR}/unified_test.mk COPYONLY)  
