CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( SIMPLE_DSUI )

ENABLE_TESTING()

# SET(CMAKE_VERBOSE_MAKEFILE 1)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )

SET(CMAKE_C_FLAGS "-DCONFIG_DSUI -Wall")

EXECUTE_PROCESS( COMMAND dsui-header --prefix simple WORKING_DIRECTORY
	${CMAKE_CURRENT_BINARY_DIR} )
ADD_EXECUTABLE( simple ${CMAKE_CURRENT_SOURCE_DIR}/simple.c
	${CMAKE_CURRENT_BINARY_DIR}/simple_dsui.c )

TARGET_LINK_LIBRARIES(simple pthread dsui kusp m)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/simple.pipes 
    ${CMAKE_CURRENT_BINARY_DIR}/simple.pipes COPYONLY)


